improved quality and test coverage